# rust-wc

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  index.html  search-index.js
benches/: bench.rs
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/core/ops/: trait.Add.js
src/: count.rs  error.rs  lib.rs  main.rs  report.rs  reports.rs  result.rs  wc.rs  wc_count.rs  wc_option.rs
src/wc/: count.rs.html  lib.rs.html  report.rs.html  result.rs.html
wc/: Reports.t.html  fn.count.html  index.html  sidebar-items.js  struct.CountStat.html  struct.Options.html  struct.Report.html  struct.Reports.html
wc/count/: CountStat.t.html  fn.count.html  struct.CountStat.html  struct.Options.html
wc/report/: struct.Report.html  struct.Reports.html
